@@ -22,7 +22,7 @@ class AggregatorFeed extends B_Model
      * @var array
      */
     protected static $table_structure = array (
-		'aggregator_feed_id' => array ('type' => 'integer','size' => 0,'required' => true),
+		'aggregator_feed_id' => array ('type' => 'integer','size' => 0,'required' => false),
 		'feed_url' => array ('type' => 'string','size' => 200,'required' => true),
 		'feed_url_md5' => array ('type' => 'string','size' => 32,'required' => true),
 		'feed_title' => array ('type' => 'string','size' => 200,'required' => true),
