@@ -6,8 +6,8 @@
 "application","us_EN","application_blogs","blogs"
 "application","us_EN","application_feed","feed"
 "application","us_EN","application_feeds","feeds"
-"application","us_EN","application_news","news"
-"application","us_EN","application_news_item","news item"
+"application","us_EN","application_feed_item","item"
+"application","us_EN","application_feed_items","items"
 "application","us_EN","application_queue","queue"
 "application","us_EN","application_click_here","click here"
 "application","us_EN","application_close","close"
